--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tbp",
   "version": "0.1.0",
-  "homepage": "https://professor-l.github.io/three-body-problem",
+  "homepage": "https://professor-l.github.io/tbp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
